@@ -35,6 +35,7 @@ Current version by Shigio Yamaguchi
   But -l(--each-line-tag) option is accepted for backward compatibility.
 * global: path conversion optimized and bug fixed.
 * gtags.conf: added documentation about variables.
+* htags: shut another security hole.
 
 Version 4.3.1 - Jan 22 2002, by Shigio Yamaguchi
 
